# glpi-agents-dev

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  mcp.json  notes.md  pyproject.toml
.agents/: MAINTAINER.md  index.md
.agents/agents/: glpi-plugin-api.md  glpi-plugin-backend.md  glpi-plugin-cicd.md  glpi-plugin-context.md  glpi-plugin-database.md  glpi-plugin-docs.md  glpi-plugin-frontend.md  glpi-plugin-performance.md  glpi-plugin-qa.md  glpi-plugin-security.md  glpi-plugin-ux.md
.agents/references/: backlog.md  context.md  decisions.md  design-patterns-glpi.md  glpi-context.md  inspection-notes.md  plugin-context.md  security-audits.md  tasks.md
.agents/references/examples/: README.md
.agents/references/examples/_template/: README.md
.agents/skills/glpi-plugin-dev/: SKILL.md
.agents/skills/glpi-plugin-dev/agents/: openai.yaml
.agents/skills/glpi-plugin-dev/references/: antipatterns.md  architecture.md  controllers.md  corporate-readiness.md  database.md  example-plugin.md  hooks.md  objects.md  packaging.md  security.md  structure.md  tips.md  translation.md  version-matrix.md
src/glpi_agents_sync/: __init__.py  __main__.py  cli.py  config.py  models.py  runtime.py  source.py  sync.py
src/glpi_agents_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/shell/smoke/: glpi_agents_sync_smoke.sh
