[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glpi-agents-sync"
version = "0.1.0"
description = "CLI para bootstrap e sincronizacao do framework glpi-agents-dev em outros projetos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
glpi-agents-sync = "glpi_agents_sync.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
